Commit Version 0.4.6 I think I fixed scroll stuck bug also mozilla bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 }
 
 body {
-    scroll-behavior: smooth;
+    scroll-behavior: auto;
     color: var(--white);
     font-weight: 300;
     font-style: normal;
